--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
-    <link rel="stylesheet" href="portfoli.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body><header>
     <div>
@@ -17,7 +17,7 @@
         I am highly curious in exploring the new technologies with having sound knowledge in Java. 
         Strong knowledge of HTML/CSS and JavaScript. Proficient in SQL and Git.
         Proven ability to work in a fast-paced environment with high-quality standards and strict deadlines.
-        I am a  </p>
+        I am a curious learner and a organised person. </p>
        
     
     <un>
